--- a/tractian-landing/src/styles/Home.module.css
+++ b/tractian-landing/src/styles/Home.module.css
@@ -2,7 +2,9 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  padding: 1rem;
+  padding: 0 1.5rem;
+  background: no-repeat url(../assets/background.svg);
+  background-position: right 0 top 0;
 }
 
 /* Enable hover only on non-touch devices */
