feat: add marquee section

--- a/tractian-landing/src/styles/globals.css
+++ b/tractian-landing/src/styles/globals.css
@@ -14,6 +14,7 @@
   --font-title: #02051e;
   --font-subtitle: #828282;
   --font-body: #828282;
+  --font-white: #ffffff;
 
   --divider-color: #e1e1e1;
 
