--- a/tractian-landing/src/components/Section/Marquee/MarqueeSection.module.css
+++ b/tractian-landing/src/components/Section/Marquee/MarqueeSection.module.css
@@ -1,7 +1,6 @@
 .wrapper {
   width: 100vw;
-  margin: 2rem 0;
-  margin-left: -2rem;
+  margin: 2rem 0 0 0;
   background-color: var(--background-dark);
   padding: 3rem;
   color: var(--font-white);
