--- a/tractian-landing/src/styles/Home.module.css
+++ b/tractian-landing/src/styles/Home.module.css
@@ -1,20 +1,12 @@
 .main {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
   min-height: 100vh;
-  padding: 0 1.5rem;
   background: no-repeat url(../assets/background.svg);
   background-position: right 0 top 0;
-}
-
-/* Enable hover only on non-touch devices */
-@media (hover: hover) and (pointer: fine) {
-}
-
-/* Mobile */
-@media (max-width: 700px) {
-}
-
-/* Tablet and Smaller Desktop */
-@media (min-width: 701px) and (max-width: 1120px) {
 }
