chore: inserindo prefixer no css

--- a/tractian-landing/src/components/Section/Hero/Hero.module.css
+++ b/tractian-landing/src/components/Section/Hero/Hero.module.css
@@ -1,5 +1,9 @@
 .heroWrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
   margin: 8rem 0;
   padding: 0 12.5rem;
@@ -12,13 +16,21 @@
 }
 
 .rewards {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
   gap: 1rem;
 }
 
 .content {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
   gap: 2rem;
   max-width: 540px;
@@ -27,7 +39,11 @@
 /* Mobile */
 @media (max-width: 700px) {
   .heroWrapper {
+    -ms-flex-wrap: wrap;
     flex-wrap: wrap;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
     margin: 1rem;
     padding: 1rem;
