--- a/tractian-landing/src/components/UI/Button/Button.module.css
+++ b/tractian-landing/src/components/UI/Button/Button.module.css
@@ -1,4 +1,6 @@
 .primary {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
   width: fit-content;
   min-width: 200px;
   padding: 0.75rem 3rem;
