--- a/tractian-landing/src/components/Alert/Alert.module.css
+++ b/tractian-landing/src/components/Alert/Alert.module.css
@@ -1,20 +1,36 @@
 .alertWrapper {
   width: 300px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
   gap: 0.25rem;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
   height: fit-content;
   padding: 1rem;
   border: 1px solid var(--divider-color);
   background-color: var(--background-glass);
+  -webkit-backdrop-filter: var(--glass-blur);
   backdrop-filter: var(--glass-blur);
   border-radius: 1rem;
+  -webkit-box-shadow: 0px 40px 35px -20px rgba(0, 0, 0, 0.25);
   box-shadow: 0px 40px 35px -20px rgba(0, 0, 0, 0.25);
 }
 
 .alertText {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
   flex-direction: row;
+  -webkit-box-align: start;
+  -ms-flex-align: start;
   align-items: flex-start;
   gap: 1rem;
 }
@@ -35,7 +51,11 @@
 }
 
 .aditionalInfosWrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   gap: 0.5rem;
 }
