--- a/tractian-landing/src/components/Contact/Contact.module.css
+++ b/tractian-landing/src/components/Contact/Contact.module.css
@@ -1,5 +1,10 @@
 .contactWrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
   gap: 1rem;
 }
@@ -9,6 +14,8 @@
 }
 
 .form {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   border: 2px solid var(--divider-dark);
   border-radius: 4px;
@@ -38,12 +45,12 @@
 }
 
 .formInput:hover {
-  background-color: var(--primary-hover);
+  background-color: var(--background-light-3);
   cursor: pointer;
 }
 
 .formInput:active,
 .formInput:focus {
-  background-color: var(--primary-click);
+  background-color: var(--background-light-3);
   outline: 3px solid var(--outline-primary);
 }
