--- a/tractian-landing/src/components/Section/About/About.module.css
+++ b/tractian-landing/src/components/Section/About/About.module.css
@@ -1,11 +1,18 @@
 .aboutSection {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   gap: 0.5rem;
   background-color: var(--background-light);
 }
 
 .scrollable {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
   gap: 1rem;
   width: 100%;
@@ -15,7 +22,11 @@
 .sectionWrapper {
   background-color: var(--background-light);
   height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
   width: 100%;
   padding: 2rem 0;
@@ -33,7 +44,12 @@
 }
 
 .content {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
   gap: 1rem;
   max-width: 500px;
@@ -54,6 +70,7 @@
 .sectionImage img {
   width: 100%;
   height: 100%;
+  -o-object-fit: cover;
   object-fit: cover;
 }
 
@@ -64,7 +81,12 @@
   }
 
   .sectionWrapper {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+    -ms-flex-direction: column-reverse;
     flex-direction: column-reverse;
+    -webkit-box-pack: end;
+    -ms-flex-pack: end;
     justify-content: flex-end;
     gap: 1rem;
     padding: 0;
@@ -75,6 +97,7 @@
     width: 100vw;
     height: 100vw;
     margin: -1rem;
+    -o-object-fit: cover;
     object-fit: cover;
   }
 }
