--- a/tractian-landing/src/components/UI/Card/Card.module.css
+++ b/tractian-landing/src/components/UI/Card/Card.module.css
@@ -1,5 +1,10 @@
 .card {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
   min-width: 200px;
   width: 100%;
@@ -12,6 +17,8 @@
 }
 
 .tag {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
   width: fit-content;
   padding: 0.25rem 0.5rem;
   border-radius: 4px;
@@ -38,6 +45,8 @@
 @media (max-width: 700px) {
   .card {
     width: auto;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
   }
 
