fix: pequenos bugs css

--- a/tractian-landing/src/components/Alert/Alert.module.css
+++ b/tractian-landing/src/components/Alert/Alert.module.css
@@ -47,7 +47,7 @@
   font-style: normal;
   font-weight: 400;
   font-size: 0.75rem;
-  color: var(--text-title);
+  color: var(--font-title);
 }
 
 .aditionalInfosWrapper {
@@ -65,5 +65,5 @@
   font-style: normal;
   font-weight: 400;
   font-size: 0.75rem;
-  color: var(--text-title);
+  color: var(--font-title);
 }
